objects/OrderTaking__c.object
<CustomObject>
    <fields>
        <fullName>opportunity__c</fullName>
        <label>opportunity</label>
        <referenceTo>opportunity__c</referenceTo>
        <relationshipLabel>OrderTakings</relationshipLabel>
        <relationshipName>OrderTakings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>product</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>OrderTakings</relationshipLabel>
        <relationshipName>OrderTakings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OrderTaking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderTaking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderTakings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>